# idn-sdk

./: .dockerignore  .gitignore  .tarpaulin.toml  BENCHMARKING.md  Cargo.toml  Dockerfile  README.md  nextest.toml  rust-toolchain.toml  tarpaulin-report.html  tarpaulin.toml  test_results  test_results.txt  update_deps.py
chains/ideal-network/bridge/: Cargo.toml
chains/ideal-network/bridge/src/: constants.rs  impls.rs  lib.rs  types.rs
chains/ideal-network/node/: Cargo.toml  README.md
chains/ideal-network/node/src/: chain_spec.rs  cli.rs  command.rs  impls.rs  main.rs  rpc.rs  service.rs
chains/kitchensink/node/: Cargo.toml  build.rs
chains/kitchensink/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
chains/kitchensink/runtime/: Cargo.toml  README.md
chains/kitchensink/runtime/src/: benchmarks.rs  impls.rs  lib.rs
client/consensus/randomness-beacon/: Cargo.toml  README.md  cobertura.xml
client/consensus/randomness-beacon/src/: block_import.rs  error.rs  gadget.rs  gossipsub.rs  import.rs  instant_seal.rs  lib.rs  mock.rs  tests.rs  worker.rs
client/consensus/randomness-beacon/src/consensus/: aura.rs  manual_seal.rs  mod.rs
client/consensus/randomness-beacon/src/tests/: mock.rs  mod.rs
contracts/: Cargo.toml  README.md  build_all_contracts.sh
contracts/example-consumer/: Cargo.toml  README.md  lib.rs
contracts/examples/consumer-contract/: Cargo.toml  README.md  idn_example_consumer_contract.json  lib.rs
contracts/examples/idn-client-contract-lib/idn-example-consumer-contract/: Cargo.toml  README.md  lib.rs
contracts/examples/idn-contract-lib/rand-extension-example/: Cargo.toml  lib.rs
contracts/examples/rand-extension/: Cargo.toml  README.md  lib.rs
contracts/idn-client/: Cargo.toml  README.md  lib.rs
contracts/idn-client-contract-lib/: Cargo.toml  README.md  constants.rs  lib.rs  traits.rs  types.rs
contracts/idn-contract-lib/: Cargo.toml  README.md  ext.rs  lib.rs
contracts/idn-contract-lib/examples/noise/: Cargo.toml  lib.rs
contracts/idn-contract-lib/examples/rand-extension-example/: README.md
contracts/idn-contracts/: Cargo.toml  lib.rs  not_Cargo.toml
contracts/idn-contracts/examples/consumer-contract/: Cargo.toml
contracts/idn-contracts/examples/rand-extension/: Cargo.toml
contracts/idn-contracts/src/: lib.rs  select.rs
contracts/idn-contracts/src/ext/: ext.rs  mod.rs
contracts/idn-contracts/src/vraas/: mod.rs  select.rs  shuffle.rs
contracts/idn-contracts/src/xcm/: mod.rs
contracts/idn-contracts/xcm/: mod.rs
contracts/idn-example-consumer-contract/: Cargo.toml  README.md  lib.rs
contracts/rand-extension-example/: Cargo.toml  lib.rs
contracts/src/: lib.rs  prelude.rs
contracts/src/ext/: README.md  chain_ext.rs  mod.rs
contracts/src/vraas/: README.md  select.rs  shuffle.rs
contracts/src/xcm/: README.md  constants.rs  mod.rs  types.rs
contracts/timelock-macro/: Cargo.toml
contracts/timelock-macro/src/: lib.rs
e2e/: Cargo.toml  README.md  run_zombienet_test.sh  secret_ed25519  setup_zombienet.sh  this_works.toml  zombienet-test.zndsl  zombienet.toml
e2e/resources/: example.contract
e2e/scripts/contracts/: deploy-contract.js
e2e/scripts/setup/: balance-transfer.js  deploy_contract.sh  open_hrmp.sh  set-drand-pubkey.js
e2e/scripts/testing/: create-subscription.js  kill-subscription.js  pause-subscription.js  quote-subscription.js  reactivate-subscription.js  request-subscription-info.js  update-subscription.js
e2e/scripts/testing/subscriptions/: create-subscription.js  dyn-create-sub.js  dyn-create-subscription.js  dyn-quote-subscription.js  kill-subscription.js  pause-subscription.js  quote-subscription.js  reactivate-subscription.js  request-subscription-info.js  update-subscription.js
e2e/scripts/testing/utils/: check-balance.js  reset-balance.js
e2e/tests/: smoke.rs
e2e/tests/contracts/: test-native-ink-chain-ext.zndsl
e2e/tests/subscriptions/: economic_tests.md  test-economics.zndsl  test-smart-contracts.zndsl  test-subscription.zndsl
e2e/typescript/: package-lock.json  package.json  testing-file.ts  tsconfig.json
kitchensink/node/: Cargo.toml  README.md  build.rs
kitchensink/node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
kitchensink/runtime/: Cargo.toml  README.md  build.rs
kitchensink/runtime/src/: benchmarks.rs  lib.rs
pallets/idn-consumer/: Cargo.toml  README.md
pallets/idn-consumer/src/: benchmarking.rs  lib.rs  mock.rs  primitives.rs  support.rs  traits.rs  weights.rs
pallets/idn-consumer/src/tests/: mock.rs  mod.rs
pallets/idn-manager/: Cargo.toml  README.md
pallets/idn-manager/docs/mermaid/: sub_state_lifecycle.mmd
pallets/idn-manager/examples/: fee_calculators.rs
pallets/idn-manager/proptest-regressions/tests/: traits.txt
pallets/idn-manager/src/: benchmarking.rs  impls.rs  lib.rs  mock.rs  primitives.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/idn-manager/src/tests/: fee_examples.rs  mock.rs  mod.rs  pallet.rs  primitives.rs  traits.rs  xcm_controller.rs
pallets/idn-manager/src/traits/: example.rs  mod.rs
pallets/randomness-beacon/: Cargo.toml  README.md
pallets/randomness-beacon/src/: aggregator.rs  benchmarking.rs  bls12_381.rs  lib.rs  mock.rs  tests.rs  types.rs  verifier.rs  weights.rs
pallets/scheduler/: Cargo.toml
pallets/scheduler/src/: lib.rs  mock.rs  spec.md  tests.rs
pallets/timelock/: Cargo.toml  README.md
pallets/timelock/src/: benchmarking.rs  lib.rs  mock.rs  spec.md  tests.rs  weights.rs
precompiles/: Cargo.toml
precompiles/src/: bls12.rs  lib.rs
precompiles/src/precompiles/: IBls12_381.sol
precompiles/src/tests/: mock.rs  mod.rs  tests.rs
primitives/crypto/: Cargo.toml  README.md
primitives/crypto/src/: bls12_381.rs  drand.rs  lib.rs  prelude.rs  test_utils.rs  verifier.rs
primitives/traits/: Cargo.toml  README.md
primitives/traits/src/: example.rs  lib.rs  pulse.rs  subscription.rs
primitives/types/: Cargo.toml
primitives/types/src/: lib.rs
support/traits/: Cargo.toml
support/traits/src/: lib.rs  rand_consumer.rs
(+214 files in other folders)
