[workspace]
resolver = "2"

members = [
    # "idn-client-contract-lib",
    # "idn-example-consumer-contract",
    # "idn-contract-lib",
    # "idn-contract-lib/examples/rand-extension-example",
    # "timelock-macro",
    "idn-contracts",
    "examples/consumer-contract",
    "examples/rand-extension"
]

