[workspace]
resolver = "2"
members = [
    "idn-contracts",
    "examples/rand-extension",
]

[workspace.dependencies]
ink = { version = "5.1.1", default-features = false }
# Parity SCALE Codec
codec = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.11.6", default-features = false, features = [
    "derive",
] }
sha2 = { version = "0.10.2", default-features = false }
bp-idn = { path = "../chains/ideal-network/bridge", default-features = false }
sp-idn-traits = { path = "../primitives/traits", default-features = false }
idn-contracts = { path = "./idn-contracts", default-features = false }
rand = { version = "0.9.2", default-features = false }
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.9.3", default-features = false }
shuffle = { version = "0.1.7", default-features = false}
# pallet-randomness-beacon.workspace = true

# [dev-dependencies]
# serde = { version = "1.0", optional = false }

# [features]
# default = ["std"]
# std = [
#     "ink/std",
#     "codec/std",
#     "scale-info/std",
#     "sha2/std",
#     "sp-idn-traits/std",
#     "bp-idn/std",
#     # "pallet-randomness-beacon/std "
# ]
