[package]
name = "idn-contracts"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
description = "ink! smart contract utilities for using the IDN"

[dependencies]
ink = { version = "5.1.1", default-features = false }
codec.workspace = true
hex.workspace = true
hex-literal.workspace = true
scale-info.workspace = true
sha2.workspace = true
sp-idn-traits.workspace = true
bp-idn.workspace = true
rand = { workspace = true, default-features = false, features = ["alloc"] }
rand_chacha.workspace = true

[dev-dependencies]
serde = { version = "1.0", optional = false }

[features]
default = ["std"]
std = [
    "ink/std",
    "codec/std",
    "hex/std",
    "scale-info/std",
    "sha2/std",
    "sp-idn-traits/std",
    "bp-idn/std",
    "rand/std",
    "rand_chacha/std",
]
