[package]
name = "idn-precompiles"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true


[lints]
workspace = true


[dependencies]
codec.workspace = true
pallet-revive.workspace = true

[features]
default = ["std"]
std = ["codec/std", "pallet-revive/std"]
