[package]
name = "example-consumer"
version = "0.1.0"
authors = ["Ideal Labs <hello@idealabs.network>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
ink = { workspace = true, default-features = false }
scale = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
idn-client = { path = "../idn-client", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "lib.rs"
crate-type = [
    # Used as normal lib
    "rlib",
    # Used as an ink! contract
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "idn-client/std",
]
ink-as-dependency = []
e2e-tests = []
