[package]
name = "example-consumer"
version = "0.1.0"
authors = ["Ideal Labs <hello@idealabs.network>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "An example consumer contract for interacting with Ideal Network services"

[dependencies]
ink = { version = "5.1.1", default-features = false }
frame-support = { version = "32.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
idn-client = { path = "../idn-client", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1", features = ["sandbox"] }
serde_json = { version = "1.0.133" }

[lib]
name = "example_consumer"
path = "lib.rs"
crate-type = [
    # Used as normal lib
    "rlib",
    # Used as an ink! contract
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "frame-support/std",
    "scale/std",
    "scale-info/std",
    "idn-client/std",
]
ink-as-dependency = []
e2e-tests = []
