[package]
name = "example-consumer"
version = "0.1.0"
authors = ["Ideal Labs <hello@idealabs.network>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "An example consumer contract for interacting with Ideal Network services"

[dependencies]
ink = { workspace = true, default-features = false }
idn-client = { path = "../idn-client", default-features = false }
sp-idn-traits = { path = "../../primitives/traits", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }
serde_json = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "idn-client/std",
    "sp-idn-traits/std",
]
ink-as-dependency = []
e2e-tests = []
