[package]
name = "idn-client-contract-lib"
version = "0.1.0"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
readme = "README.md"
description = "A client library for interacting with Ideal Network services"

[dependencies]
ink = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
sp-idn-traits = { workspace = true, default-features = false }
idn-runtime = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "codec/std",
    "scale-info/std",
    "sp-idn-traits/std",
    "idn-runtime/std",
]
runtime-benchmarks = [
    "idn-runtime/runtime-benchmarks",
]
